--- a/app/src/main/res/drawable/background_image.xml
+++ b/app/src/main/res/drawable/background_image.xml
@@ -1,9 +1,11 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="256dp"
-    android:height="256dp"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:width="200dp"
+    android:height="200dp"
     android:viewportWidth="256"
-    android:viewportHeight="256">
+    android:viewportHeight="256"
+    tools:ignore="VectorRaster">
   <path
       android:pathData="M0,0h256v256h-256z">
     <aapt:attr name="android:fillColor">
