--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -14,6 +14,7 @@
         android:layout_gravity="center"
         android:scaleType="centerInside"
         android:src="@drawable/ic_splash"
+        android:contentDescription="@string/splash_icon"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
