Minor code improvements

--- a/app/src/main/res/layout/item_cardview_shoes.xml
+++ b/app/src/main/res/layout/item_cardview_shoes.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_margin="8dp"
     android:layout_gravity="center"
-    app:cardElevation="4dp"
-    app:cardCornerRadius="8dp">
+    android:layout_margin="8dp"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,37 +19,38 @@
             android:id="@+id/img_item_photo"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:scaleType="centerCrop"
-            android:paddingBottom="30dp"
             android:background="@drawable/rounded_shape"
             android:clipToOutline="true"
             android:contentDescription="@string/shoes_image"
-            tools:src="@drawable/nike_air_force_1_07"
-            tools:ignore="UnusedAttribute" />
+            android:paddingBottom="30dp"
+            android:scaleType="centerCrop"
+            tools:ignore="UnusedAttribute"
+            tools:src="@drawable/nike_air_force_1_07" />
 
         <TextView
-            style="@style/TextContent.TitleMedium"
             android:id="@+id/tv_item_name"
+            style="@style/TextContent.TitleMedium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="@string/shoes_name" />
 
         <TextView
-            style="@style/TextContent"
             android:id="@+id/tv_item_type"
+            style="@style/TextContent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:text="@string/type" />
+
         <TextView
-            style="@style/TextContent.TitleLarge.Bold"
             android:id="@+id/tv_item_price"
+            style="@style/TextContent.TitleLarge.Bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="@string/price"
-            android:textColor="@color/orange"/>
+            android:textColor="@color/orange" />
 
     </LinearLayout>
 
