--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,8 @@
         android:layout_height="wrap_content"
         android:background="@color/toolbar_color"
         android:elevation="0dp"
-        app:contentInsetStart="0dp"
         app:contentInsetEnd="0dp"
+        app:contentInsetStart="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -55,9 +55,9 @@
         android:id="@+id/rv_shoes"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        tools:listitem="@layout/item_cardview_shoes"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        tools:listitem="@layout/item_cardview_shoes" />
 </androidx.constraintlayout.widget.ConstraintLayout>
